<resources>
    <string name="app_name">VideosPlusCMS</string>
    <string name="create">Create</string>
    <string name="nav_users_text">Users</string>
    <string name="nav_movies_text">Movies</string>
    <string name="nav_movie_versions_text">Movie Versions</string>
    <string name="password_input_text">Password</string>
    <string name="sign_in_input_text">Sign in</string>
    <string name="username_input_text">Username</string>
    <string name="duration_editText_text">Write duration...</string>
    <string name="duration_text">Duration</string>
    <string name="poster_text">Write poster url...</string>
    <string name="poster_textView_text">Poster url</string>
    <string name="rating_editText_text">Write rating...</string>
    <string name="rating_textView_text">Rating</string>
    <string name="releaseDate_editText_text">Write release date...</string>
    <string name="release_date_textView_text">Release Date</string>
    <string name="summary_editText_text">Write summary...</string>
    <string name="summary_textView_text">Summary</string>
    <string name="title_editText_text">Write title...</string>
    <string name="title_textView_text">Title</string>
    <string name="format_editText_text">Write format...</string>
    <string name="format_textView_text">Format</string>
    <string name="link_editText_text">Write link...</string>
    <string name="link_textView_text">Link</string>
    <string name="movieId_editText_text">Write movieId...</string>
    <string name="movieid_textView_text">MovieId</string>
    <string name="resolution_editText_text">Write resolution...</string>
    <string name="resolution_textView_text">Resolution</string>
    <string name="password_editText_text">Write password...</string>
    <string name="password_textView_text">Password</string>
    <string name="username_editText_text">Write username...</string>
    <string name="username_textView_text">Username</string>
    <string name="delete_contentDescription_text">delete</string>
    <string name="menu_contentDescription_text">menu</string>
    <string name="username_text">username</string>
    <string name="movieid_text">movieId</string>
    <string name="title_text">title</string>
    <string name="format_movieVersion_text">format</string>
    <string name="resolution_movieVersion_text">resolution</string>
    <string name="movieid_movieVersion_text">movieId</string>
    <string name="login_textView_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="password_input2_editText_text">Confirm Password</string>
    <string name="register_textView_text">Register</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="upload_button_text">Upload</string>
</resources>