<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/nav_users_text" />
    <item
        android:id="@+id/nav_movies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_movie_24"
        android:title="@string/nav_movies_text" />
    <item
        android:id="@+id/nav_movie_versions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_video_file_24"
        android:title="@string/nav_movie_versions_text" />
</menu>